@@ -11,6 +11,8 @@ Revision history for Perl extension Perl-MinimumVersion
 	- exists(&sub) (Kevin Ryde, Alexandr Ciornii)
 	- _bugfix_magic_errno will return element (Alexandr Ciornii)
 	- add 'encoding' to 5.8 pragmas (Alexandr Ciornii)
+	- private method _set_checks2skip for
+	  Perl::Critic::Policy::Compatibility::PerlMinimumVersionAndWhy (Alexandr Ciornii)
 
 1.28 Wed  2 Mar 2011
 	- The ->isa in the 5.10 operator and magic variable tests were
